// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> renders component 1`] = `
.c0 {
  font-size: 16px;
  font-weight: 400;
  line-height: 1.25;
}

.c1 {
  width: 100%;
  color: #fff;
  background-color: #323232;
  border: none;
  padding: 12px 16px;
  outline: 0;
  border-radius: 12px;
  height: auto;
}

<input
  class="c0 c1"
  height="auto"
  name="nome"
  placeholder="Nome"
  required=""
  value="Gabreu"
/>
`;

exports[`<TextField /> when field is invalid displays the respective error message 1`] = `
.c0 {
  font-size: 16px;
  font-weight: 400;
  line-height: 1.25;
}

.c1 {
  width: 100%;
  color: #fff;
  background-color: #323232;
  border: none;
  padding: 12px 16px;
  outline: 0;
  border-radius: 12px;
  height: auto;
  border: 1px solid;
  border-color: #dc3545;
}

.c1 + span {
  color: #dc3545;
}

<input
  class="c0 c1"
  height="auto"
  name="email"
  placeholder="Email"
  required=""
  type="email"
  value="teste.com"
/>
`;
